--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,12 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            Poole
-tagline:          The Jekyll Butler
-url:              http://getpoole.com
+title:            Harvy
+tagline:          The Cookie monster
+url:              http://harvinderatwal.com
 paginate:         1
 baseurl:          /
 author:
-  name:           Mark Otto
-  url:            https://twitter.com/mdo
-  email:          markdotto@gmail.com
-
-# Custom vars
-version:          1.0.0
-github:
-  repo:           https://github.com/poole/poole
+  name:           Harvinder Atwal
+  url:            https://twitter.com/harvy2004
+  email:          harvinder@harvinderatwal.com
