--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ tagline:          The Cookie monster
 url:              http://harvinderatwal.com
 paginate:         3
 baseurl:          /
+homepage:         http://harvinderatwal.com
 author:
   name:           Harvinder Atwal
   url:            https://twitter.com/harvy2004
