--- a/_config.yml
+++ b/_config.yml
@@ -1,57 +1,79 @@
-site: harvy2004
+# Site settings
+title: Harvinder Atwal
+description: >-
+  He's writing in Bahasa about web technology and experience as a journal 
+  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
+lang: en-GB
+timezone: Asia/Jakarta
+image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
+repo: https://github.com/piharpi/mahendrata.now.sh
+mode: dark # default theme "dark" | "light"
 
-url: harvy2004.github.io
-baseurl: /
+# Profile settings
+author:
+  name: Harvinder Atwal
+  bio: >-
+    Developer by day, hacker by night
+  username: harvy2004
+  email: blog@harvinderatwal.com
+  avatar: /assets/img/avatar.jpg
 
+# Url settings
+url: "https://harvinderatwal.com"
+baseurl:
+permalink: /:title/
+google_analytics:
+fb_appid:
+
+# Collection setting
 collections:
-  pages:
-    output: true
-    permalink: /:name
   posts:
     output: true
-    permalink: /blog/:slug
-  projects:
-    output: true
-    permalink: /project/:slug
 
-defaults:
-  -
-    scope:
-      path: ""
-    values:
-      layout: "default"
-  -
-    scope:
-      path: ""
-      type: "pages"
-    values:
-      layout: "page"
-  -
-    scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: "post"
-  -
-    scope:
-      path: ""
-      type: "projects"
-    values:
-      layout: "project"
-
+# Markdown settings
 markdown: kramdown
-
+highlighter: rouge
 kramdown:
-  input: GFM
   syntax_highlighter: rouge
-  
+
+# Default front matter
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: post
+      comments: false
+
+# Jekyll Compose default front matter
+jekyll_compose:
+  post_default_front_matter:
+    modified:
+    tags: []
+    description:
+  draft_default_front_matter:
+    modified:
+    tags: []
+    description:
+
+# Build settings
 sass:
   style: compressed
 
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
+include:
+  - _redirects
+  - .htaccess
 
-paginate: 6
-paginate_path: "/blog/page:num/"
-  
+exclude:
+  - CNAME
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - CHANGELOG.md
+  - README.md
+
+# Plugins
+plugins:
+  - jekyll-feed
+  - jekyll-sass-converter
+  - jekyll-sitemap
+  - jekyll-postfiles
