--- a/.github/workflows/deploy-surge.yml
+++ b/.github/workflows/deploy-surge.yml
@@ -13,5 +13,6 @@ jobs:
         with:
           node-version: 8
       - run: npm install -g surge
+      - run: bundle install
       - run: jekyll build
       - run: surge _site/ ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_TOKEN }}
