--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -17,5 +17,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
       - uses: helaili/jekyll-action@2.0.3
+        exclude: [vendor] #https://github.com/jekyll/jekyll/issues/2938
         env:
           JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
