--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,11 @@ exclude:
   - LICENSE
   - CHANGELOG.md
   - README.md
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
 
 # Plugins
 plugins:
