Change webp to png

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:
     Developer by day, hacker by night
   username: harvy2004
   email: blog@harvinderatwal.com
-  avatar: /assets/img/robot.webp
+  avatar: /assets/img/avatar.png
 
 # Url settings
 url: "https://harvinderatwal.com"
