--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: Harvinder Atwal
 description: >-
-  He's writing in Bahasa about web technology and experience as a journal 
-  for documentation things that he learned, meet him <a href="https://github.com/piharpi" target="_blank" rel="noopener">@github</a>.
+  A man after a dream, after mystery but ultimately just after fun.
 lang: en-GB
 timezone: Asia/Jakarta
 image: assets/img/avatar.png # This image used for Open Graph more info https://ogp.me/
