--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -16,7 +16,13 @@ jobs:
             ${{ runner.os }}-gems-
             
     # Standard usage
-      - uses:  helaili/jekyll-action@v2.5
+      - uses: helaili/jekyll-action@v2.5
         with:
-         token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          jekyll_src: './'
+          target_branch: 'gh-pages'
+          keep_history: false
+          pre_build_commands: |
+            echo "Installing additional dependencies..."
+            gem install jekyll-postfiles -v 3.0
 
