--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,28 +1,33 @@
 name: Build and deploy Jekyll site to GitHub Pages
 
 on:
-  push
+  push:
+    branches:
+      - publish  # or main/master, whichever is your default branch
 
 jobs:
-  github-pages:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-            
-    # Standard usage
-      - uses: helaili/jekyll-action@v2.5
+          ruby-version: '3.0'
+          bundler-cache: true  # This runs bundle install and caches installed gems automatically
+
+      - name: Build Jekyll site
+        run: |
+          bundle config path vendor/bundle
+          bundle install
+          bundle exec jekyll build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          jekyll_src: './'
-          target_branch: 'gh-pages'
-          keep_history: false
-          pre_build_commands: |
-            echo "Installing additional dependencies..."
-            gem install jekyll-postfiles -v 3.0
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./_site
+          publish_branch: gh-pages
 
