--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -22,7 +22,23 @@ jobs:
         run: |
           bundle config path vendor/bundle
           bundle install
-          bundle exec jekyll build
+          # Create a temporary .jekyll-metadata file to exclude binary files
+          echo 'exclude: ["**/*.jpg", "**/*.jpeg", "**/*.png", "**/*.gif", "**/*.pdf", "**/*.zip", "**/*.mp4"]' > _tmp_config.yml
+          bundle exec jekyll build --config _config.yml,_tmp_config.yml
+
+      - name: Copy images to output and create .nojekyll
+        run: |
+          find _posts -type f \( -iname "*.jpg" -o -iname "*.jpeg" -o -iname "*.png" -o -iname "*.gif" \) | while read -r file; do
+            dir="_site/$(dirname "$file")"
+            mkdir -p "$dir"
+            cp "$file" "$dir/"
+          done
+          touch _site/.nojekyll
+      
+      - name: Debug - List site directory structure
+        run: |
+          echo "Listing _site directory structure"
+          find _site -type f | sort
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -30,4 +46,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_site
           publish_branch: gh-pages
+          enable_jekyll: false  # Important: Don't process with Jekyll again
 
